--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,25 @@ spring:
     password: 123
   profiles:
     active: local
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: 123456
+      ttl: 3600
+      username: default
+  # session 配置
+  session:
+    redis:
+      flush-mode: on_save
+    # session 30 天过期
+    timeout: 2592000
+
 server:
   port: 8123
   servlet:
     context-path: /api
+    # cookie 30 天过期
+    session:
+      cookie:
+        max-age: 2592000
