feat: 后端 AI 稳定性优化 自动重试护轨；防止工具调用无限循环

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ spring:
       password: 123456
       ttl: 3600
       username: default
+      database: 0
   # session 配置
   session:
     redis:
