--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
             <version>3.50.0</version>
         </dependency>
 
+        <!-- 监控 -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
 
     </dependencies>
 
