--- a/yu-ai-code-mother-microservice/pom.xml
+++ b/yu-ai-code-mother-microservice/pom.xml
@@ -93,6 +93,13 @@
                 <version>3.14.0</version>
                 <configuration>
                     <parameters>true</parameters>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </path>
+
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
