refactor: (WIP) 微服务改造 - Dubbo 跨服务调用

--- a/yu-ai-code-mother-microservice/yu-ai-code-app/src/main/resources/application.yaml
+++ b/yu-ai-code-mother-microservice/yu-ai-code-app/src/main/resources/application.yaml
@@ -40,9 +40,26 @@ server:
 springdoc:
   group-configs:
     - group: 'default'
-      packages-to-scan: com.wolfhouse.yuaicodemother.controller
+      packages-to-scan: com.wolfhouse.yuaicodeapp.controller
 # knife4j
 knife4j:
   enable: true
   setting:
     language: zh_cn
+
+
+# Dubbo
+dubbo:
+  registry:
+    address: nacos://127.0.0.1:8848?username=nacos&password=nacos
+    register-mode: instance
+
+  protocol:
+    name: tri
+    port: 50053
+  consumer:
+    timeout: 120000
+  provider:
+    timeout: 120000
+  application:
+    qos-port: 22223
