--- a/yu-ai-code-mother-microservice/yu-ai-code-app/pom.xml
+++ b/yu-ai-code-mother-microservice/yu-ai-code-app/pom.xml
@@ -18,6 +18,16 @@
     </properties>
 
     <dependencies>
+        <!-- Dubbo -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- Redisson for distributed rate limiting -->
         <dependency>
             <groupId>org.redisson</groupId>
@@ -67,11 +77,6 @@
         <dependency>
             <groupId>com.wolfhouse</groupId>
             <artifactId>yu-ai-code-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.wolfhouse</groupId>
-            <artifactId>yu-ai-code-ai</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
