--- a/yu-ai-code-mother-microservice/yu-ai-code-model/pom.xml
+++ b/yu-ai-code-mother-microservice/yu-ai-code-model/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
             <version>1.11.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
