--- a/yu-ai-code-mother-microservice/yu-ai-code-screenshot/pom.xml
+++ b/yu-ai-code-mother-microservice/yu-ai-code-screenshot/pom.xml
@@ -34,6 +34,21 @@
             <artifactId>yu-ai-code-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-nacos-spring-boot-starter -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.wolfhouse</groupId>
+            <artifactId>yu-ai-code-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
