--- a/yu-ai-code-mother-microservice/yu-ai-code-ai/pom.xml
+++ b/yu-ai-code-mother-microservice/yu-ai-code-ai/pom.xml
@@ -17,6 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <!-- 监控 -->
+        <dependency>
+            <groupId>com.wolfhouse</groupId>
+            <artifactId>yu-ai-code-monitor</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- LangChain4j -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
