--- a/yu-ai-code-mother-microservice/yu-ai-code-user/src/main/resources/application.yml
+++ b/yu-ai-code-mother-microservice/yu-ai-code-user/src/main/resources/application.yml
@@ -53,3 +53,13 @@ dubbo:
     timeout: 60000
   application:
     qos-port: 22221
+
+# prometheus
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  endpoint:
+    health:
+      show-details: always
